@@ -1,6 +1,10 @@
 RC 4
 ====
 
+- Added more fine-grained fetching strategy
+
+- Support multiple validators simulatenously
+
 - Added mult-level editing capability
 
 - Added dynamic property value resolution
